# wikiteam

./: .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .pymarkdown.json  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  INSTALLATION  INSTALLATION.md  PUBLISHING.md  Pipfile  README.md  USAGE  USAGE.md  commonschecker.py  commonsdownloader.py  commonssql.py  dokuwikidump.py  dumpgenerator.py  gui.py  launcher.py  not-archived.py  pyproject.toml  requirements.txt  revnum.json  revnum.txt  tox.ini  uploadedwikis.txt  uploader.py  wikiadownloader.py  wikipediadownloader.py  wikispaces.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: changelog-ci.yml  test-dumogenerator.yml  test-dumpgenerator.yml
batchdownload/: launcher.py
batchdownload/lists/: list000  list001  list003  list004  list005  list006  list007  list009  list010  list011  list012  list013  list014  list015  list016  list017  list018  list020  list023  list024  list025  list026  list028  list029  list030  list032  list033  list034  list035  list036  list037  list038  list039  list040  list042  list043  list044  list045  list046  list047  (+20 more)
batchdownload/taskforce/: list002  list008  list010  list018  list019  list021  list022  list024  list027  list031  list032  list033  list041  list042  list043  list046  list050  list051  list054  list055  list059  list060  list062  list065  list067  list068  list069  list070  list072  list073  mediawikis_done_2014.txt  mediawikis_notarchived_2018.txt  mediawikis_pavlo.alive.filtered.todo.txt
batchdownload/wikkii/: wikkii.txt
docs/: Makefile  README.md  README.me  conf.py  index.rst  make.bat
editthis/: editthis.info  editthis.py
listsofwikis/: BHW-alive_wikis.txt  checkalive.pl  checkalive.py  editthis.info  gamepedia.com  mediawikis_2013-alive.txt  mediawikis_2013.txt  mediawikis_2013_checked.txt  mediawikis_pavlo.alive.filtered.txt  mediawikis_pavlo.alive.txt  neoseeker-spider.py  neoseeker.com  neoseeker.com.info  orain-spider.py  orain.org  orain.org.info  readme  readme-checkalive.txt  referata-spider.py  referata.com  referata.com.info  scribblewiki.com  shodan.alive.txt  shodan.info  shoutwiki-spider.py  shoutwiki.com  shoutwiki.com.info  sourceforge.net  tropicalwikis.com.info  wiki-site-spider.py  wiki-site.com  wikkii-spider.py  wikkii.com  wikkii.com.info
listsofwikis/dokuwiki/: dokuinstall.txt
listsofwikis/jspwiki/: JSPWiki.info  JSPWiki.txt
listsofwikis/mediawiki/: battlestarwiki.org  checkalive.pl  checkalive.py  fandom-spider.py  fandom.com-unarchived  gamepedia.com  mediawikis_2018-alive.txt  mediawikis_2020-unarchived.txt  miraheze-spider.py  miraheze.org  miraheze.org.info  neoseeker-spider.py  neoseeker.com  neoseeker.com.info  orain-spider.py  orain.org  orain.org.info  readme  readme-checkalive.txt  referata-spider.py  shodan.txt  shoutwiki-spider.py  shoutwiki.com  sourceforge.net  tropicalwikis.com  wiki-site-spider.py  wiki-site.com  wiki.wiki  wiki.wiki.info  wikia.py  wikkii-spider.py
listsofwikis/usemodwiki/: UseModWiki.info  UseModWiki.txt
listsofwikis/wikidot/: wikidot-duckduckgo.py  wikidot-spider.py  wikidot-spider.txt  wikidot-spider2.py  wikidot-spider2.txt
listsofwikis/wikiindex-based-lists/: other-alive_wikis.list  other.list
listsofwikis/wikispaces/: users.txt  wikis.txt  wikispaces-duckduckgo.py  wikispaces-duckduckgo.txt  wikispaces-spider.py  wikispaces00  wikispaces01  wikispaces02  wikispaces04  words.txt
referata/: referata.py  referata.txt  referata.txt.all
research/paper-wikiteam-2014/: readme.txt  wikiteam-2014-en.tex  wikiteam-2014-es.tex  wikiteam-2014.bib  wink.bst
rewrite/: README.md
schema/: README.md  export-0.2.diff  export-0.3.diff  export-0.4.diff  export-0.5.diff  export-0.6.diff  export-0.7.diff  export-0.8.diff
testing/: test_dumpgenerator.py  test_dumpgenerator_offline.py
tests/: README.md  test_dumpgenerator.py
tools/: wikiadownloader.py  wikipediadownloader.py  wikispaces.py  xml2titles.py
tools/batchdownload/: 7z2bz2.sh
tools/wikiapiary/: README.md  wikiapiary-update-ia-params.py  wikiapiary_family.py
tools/wikimediacommons/: commons-update-status.py  commonschecker.py  commonsdownloader.py  commonssql.py
wikiapiary/: README.md  README.me  wikiapiary-update-ia-params.py  wikiapiary_family.py
wikimediacommons/: commons-update-status.py  commonsdownloader.py  commonssql.py  commonssql.sh  commonssql2.sh
wikiteam/: mediawiki.py  wikispaces.py  wikiteam.py
wikiteam3/: dumpgenerator.py  gui.py  launcher.py  not-archived.py  uploader.py  wikiadownloader.py  wikipediadownloader.py  wikispaces.py
wikiteam3/batchdownload/: 7z2bz2.sh
wikiteam3/dumpgenerator/: __init__.py  __main__.py  api.py  api_check.py  api_mw.py  api_retry.py  clean_html.py  clean_xml.py  cli.py  config.py  delay.py  exceptions.py  generator.py  get_json.py  greeter.py  image.py  image_dump.py  (+25 more)
wikkii/: wikkii.py  wikkii.txt
(+153 files in other folders)
